# modernisation_agents

./: .gitignore  .gitmodules  config.yaml  pyproject.toml
.claude/commands/: viper.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agents/: viper.md
blackjack/: glossary.md
docs/: modernisation_agents_v2.pptx  project_idea.md  reference-repo-mapping.md
docs/implementation-artifacts/: 1-1-project-scaffolding-and-shared-infrastructure.md  1-2-specdb-mcp-schema-and-migrations.md  1-3-specdb-mcp-crud-tools.md  1-4-engagement-configuration-and-templates.md  2-1-delta-macros-mcp-macro-lookup.md  2-2-delta-macros-mcp-macro-ingestion.md  3-1-cobol-parser-mcp-core-module-parsing-and-call-graph.md  3-2-cobol-parser-mcp-complexity-scoring-and-anti-pattern-detection.md  3-3-cobol-parser-mcp-semantic-paragraph-clustering.md  3-4-viper-bmad-agent-definition.md  3-5-viper-workflow-and-step-files.md  sprint-status.yaml
docs/planning-artifacts/: architecture.md  epics.md  full-pipeline-workflow.md  implementation-readiness-report-2026-03-01.md  prd.md  product-brief-modernisation_agents-2026-03-01.md
mcp-servers/cobol_parser_mcp/: antipattern_detector.py  call_graph.py  cluster_builder.py  cobol_parser.py  complexity_scorer.py  dialect_handler.py  server.py
mcp-servers/delta_macros_mcp/: macro_library.py  server.py
mcp-servers/gitlab_mcp/: config.py  result.py  server.py
mcp-servers/specdb_mcp/: schema.py  (+3 more)
templates/: glossary-template.md  macro-template.md
(+92 files in other folders)
